<resources>
    <string name="app_name">Nutrition_Maintenance</string>


    <string name="str_main1">Health Awareness</string>
    <string name="str_main2">Calculate your BMI</string>
    <string name="str_main3">Do you want to maintain your daily Nutrition??\n Click *Daily Food chart* For maintaining nutrition.</string>
    <string name="bt_main1">Daily Food Chart</string>


    <string name="bt_login1">Log In</string>
    <string name="bt_login2">Sign Up</string>

    <string name="str_new1">UserId</string>
    <string name="str_new2">Password</string>
    <string name="hint_new1">Enter your id</string>
    <string name="hint_new2">Enter your password</string>
    <string name="bt_new1">Enter</string>


    <string name="str_sign1">Name</string>
    <string name="str_sign2">Date Of Birth</string>
    <string name="str_sign3">Gender</string>
    <string name="str_sign4">Email</string>
    <string name="str_sign5">User Id</string>
    <string name="str_sign6">Password</string>
    <string name="str_sign8">Sign_Up</string>
    <string name="hint_sign1">Enter your Name</string>
    <string name="hint_sign2">DD/MM/YY</string>
    <string name="hint_sign3">Male/Female</string>
    <string name="hint_sign4">mail id</string>
    <string name="hint_sign5">enter user id</string>
    <string name="hint_sign6">enter passwoord</string>
    <string name="bt1_sign7">Sign Up</string>


    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="text">Select,which priod do you want to calculate?</string>


</resources>
