<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.nutrition_maintenance.New_login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:layout_weight="1"
                android:text="@string/str_new1"
                android:textSize="30dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingLeft="50dp"
                android:layout_weight="1"
                android:hint="@string/hint_new1"
                android:gravity="center"
                android:id="@+id/usId"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:layout_weight="1"
                android:text="@string/str_new2"
                android:textSize="30dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingLeft="50dp"
                android:layout_weight="1"
                android:hint="@string/hint_new2"
                android:gravity="center"
                android:id="@+id/pass"

                />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bt_new1"
            android:textSize="30dp"
            android:layout_gravity="center"

            />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
